<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/nav_bar" />

    <RelativeLayout
        android:id="@+id/nav_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/nav_learn"
                style="@style/icon_home_layout">

                <ImageView
                    style="@style/icon_home"
                    app:srcCompat="@drawable/ic_draw" />

                <TextView
                    style="@style/icon_home_text"
                    android:text="@string/home_card_learn" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_practice"
                style="@style/icon_home_layout">

                <ImageView
                    style="@style/icon_home"
                    app:srcCompat="@drawable/ic_construction" />

                <TextView
                    style="@style/icon_home_text"
                    android:text="@string/home_card_program" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_game"
                style="@style/icon_home_layout">

                <ImageView
                    style="@style/icon_home"
                    app:srcCompat="@drawable/ic_story" />

                <TextView
                    style="@style/icon_home_text"
                    android:text="@string/home_card_game" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nav_user"
                style="@style/icon_home_layout">

                <ImageView
                    style="@style/icon_home"
                    app:srcCompat="@drawable/ic_user" />

                <TextView
                    style="@style/icon_home_text"
                    android:text="@string/home_card_account" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>