<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ImageView
        android:layout_width="@dimen/unit150"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/unit12"
        android:src="@mipmap/wlogo" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/unit16"
        android:orientation="horizontal">

        <TextView
            style="@style/text_light_bold_large"
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/unit16"
            android:clickable="true"
            android:text="@string/sign_in_start"/>

        <TextView
            style="@style/text_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/unit16"
            android:clickable="true"
            android:text="@string/or_text" />


        <TextView
            style="@style/text_light_bold_large"
            android:id="@+id/continue_wo_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/unit16"
            android:clickable="true"
            android:text="@string/sign_in_silent" />


    </LinearLayout>

</RelativeLayout>
