<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/unit240"
    android:layout_height="@dimen/unit160">

    <androidx.cardview.widget.CardView
        android:id="@+id/program_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/unit4"
        android:background="@color/colorWhite"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        card_view:cardCornerRadius="@dimen/unit4">


        <ImageView
            android:id="@+id/program_card_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/unit8"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/button_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    style="@style/button_program"
                    android:id="@+id/program_run_code"
                    android:layout_weight="1"
                    android:text="@string/card_run" />

                <Button
                    style="@style/button_program"
                    android:id="@+id/program_change_code"
                    android:layout_weight="1"
                    android:text="@string/card_change"/>

                <Button
                    style="@style/button_program"
                    android:id="@+id/program_delete_code"
                    android:layout_weight="1"
                    android:text="@string/card_delete" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_holder"
                android:layout_below="@id/title_line">

                <TextView
                    android:id="@+id/program_card_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginTop="@dimen/unit4"
                    android:layout_marginBottom="@dimen/unit4"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/unit10"
                    tools:text="@tools:sample/lorem/random" />

            </ScrollView>

            <TextView
                style="@style/text_light_bold_large"
                android:id="@+id/program_card_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/unit4"
                android:gravity="center_vertical"
                tools:text="Card Title" />

            <View
                android:id="@+id/title_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/unit1"
                android:layout_below="@+id/program_card_title"
                android:layout_marginRight="@dimen/unit8"
                android:background="@color/colorLightGrey" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>